--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
@@ -24,5 +25,8 @@
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.2"
+  },
+  "dependencies": {
+    "styled-components": "^6.1.19"
   }
 }
